# gen3-mcp

./: LICENSE  README.md  demo_validation.py  gen3.py  gen3_validator.py  pyproject.toml  setup_dev.sh  test_validation.py
docs/: DEVELOPMENT.md  README.md
src/gen3_mcp/: __init__.py  auth.py  client.py  client.py.bak  config.py  consts.py  data.py  exceptions.py  graphql_parser.py  graphql_validator.py  main.py  models.py  protocols.py  query.py  resources.py  schema.py  schema.py.bak  schema_extract.py  schema_extract.py.bak  server.py  server.py.bak  service.py  tools.py  utils.py
src/gen3_mcp/client/: __init__.py  auth.py  gen3_client.py
src/gen3_mcp/config/: .settings.py.swp  __init__.py  logging.py  settings.py
src/gen3_mcp/exceptions/: __init__.py
src/gen3_mcp/query/: __init__.py  builder.py  executor.py
src/gen3_mcp/resources/: __init__.py  gen3_resources.py
src/gen3_mcp/schema/: __init__.py  service.py  validation.py
src/gen3_mcp/tools/: __init__.py  unified_tools.py
tests/: conftest.py  conftest_improved.py  ex_schema.json  ex_schema_extract.json  failing_test_1.graphql  failing_test_2.graphql  failing_test_3.graphql  passing_test_1.graphql  passing_test_2.graphql  passing_test_3.graphql  schema_loading_examples.py  subject_entity_context.json  test_client.py  test_conf.py  test_config.py  test_consts.py  test_data.py  test_graphql_parser.py  test_graphql_validator.py  test_integration.py  test_main.py  test_query.py  test_query.py.bak  test_schema.py  test_schema.py.bak  test_schema_extract.py  test_service.py  test_simple.py  test_tools.py  test_utils.py
tests/unit/: test_query.py  test_schema_service.py  test_service.py  test_tools.py  test_validation_service.py
